--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -6,13 +6,15 @@
     <ImageView
         android:id="@+id/state_flag"
         android:layout_width="wrap_content" 
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent"
+        android:layout_margin="@dimen/padding_small"/>
 
     <TextView
         android:id="@+id/state"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textSize="16dp" 
-        android:padding="10dp"/>
+        android:gravity="center_vertical"
+        android:textSize="18sp"
+        android:padding="@dimen/padding_small"/>
 
 </LinearLayout>
